--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-translation-manager": "^0.5.2",
+        "brotzka/laravel-dotenv-editor": "^2.1",
         "davejamesmiller/laravel-breadcrumbs": "^5.2",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
