--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,14 +1,19 @@
 {
     "/js/app.js": "/js/app.js?id=27f1a1c858e5dd3e14df",
     "/css/app.css": "/css/app.css?id=38f8827bac29200bae67",
+    "/js/frontend-ar.js": "/js/frontend-ar.js?id=f777ac992e90e5738a12",
+    "/js/frontend-custom.js": "/js/frontend-custom.js?id=7b6a552cbab306a88e81",
+    "/js/frontend-en.js": "/js/frontend-en.js?id=4e599111b6b97a54923d",
+    "/css/frontend-rtl.css": "/css/frontend-rtl.css?id=1056ef0ab33c6ea286f7",
     "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=61baee06671d02a32490",
-    "/css/frontend-custom.css": "/css/frontend-custom.css?id=fa0c8da9887fcf5e00c2",
-    "/css/porto.demo2.css": "/css/porto.demo2.css?id=5d8d9db654c67bd5f77f",
-    "/css/porto.demo3.css": "/css/porto.demo3.css?id=879807bf0af619cfee98",
-    "/css/porto.demo4.css": "/css/porto.demo4.css?id=ae4e93867fb862e9d230",
+    "/css/frontend-custom-en.css": "/css/frontend-custom-en.css?id=d41d8cd98f00b204e980",
+    "/css/porto.demo2.css": "/css/porto.demo2.css?id=839484b4900f7f793909",
+    "/css/porto.demo3.css": "/css/porto.demo3.css?id=f452a4ddf93ee33b068e",
+    "/css/porto.demo4.css": "/css/porto.demo4.css?id=9bcd3ad716705522cac4",
     "/js/porto.demo2.js": "/js/porto.demo2.js?id=03105b08b395169f0f0b",
     "/js/porto.demo3.js": "/js/porto.demo3.js?id=10cda8122af6d4baa6df",
     "/js/porto.demo4.js": "/js/porto.demo4.js?id=0c79faaf8c588cb07975",
+    "/js/frontend-rtl.js": "/js/frontend-rtl.js?id=46b07d19192c55ed1b1f",
     "/css/backend.css": "/css/backend.css?id=f7326001103896711efe",
     "/css/backend-rtl.css": "/css/backend-rtl.css?id=9443f88e20308d70c408",
     "/js/backend.js": "/js/backend.js?id=5c67471eda6b88c3f987",
