--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,11 @@
 {
     "/js/app.js": "/js/app.js?id=27f1a1c858e5dd3e14df",
     "/css/app.css": "/css/app.css?id=38f8827bac29200bae67",
-    "/js/frontend-ar.js": "/js/frontend-ar.js?id=f777ac992e90e5738a12",
+    "/js/frontend-ar.js": "/js/frontend-ar.js?id=7a90d1fa50adc14f00eb",
     "/js/frontend-custom.js": "/js/frontend-custom.js?id=7b6a552cbab306a88e81",
     "/js/frontend-en.js": "/js/frontend-en.js?id=4e599111b6b97a54923d",
     "/css/frontend-rtl.css": "/css/frontend-rtl.css?id=6d06760beb8bfc940224",
-    "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=61baee06671d02a32490",
+    "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=46e8ac8cdb00931a663c",
     "/css/frontend-custom-en.css": "/css/frontend-custom-en.css?id=d41d8cd98f00b204e980",
     "/css/wokiee.demo4.css": "/css/wokiee.demo4.css?id=77e8a9d1d29357441134",
     "/css/wokiee.demo5.css": "/css/wokiee.demo5.css?id=88c8c76d99067abd911f",
@@ -13,6 +13,7 @@
     "/css/porto.demo3.css": "/css/porto.demo3.css?id=d2a00d8ba6c256bdc22a",
     "/css/porto.demo4.css": "/css/porto.demo4.css?id=86a8373262c718d69406",
     "/js/wokiee.demo5.js": "/js/wokiee.demo5.js?id=f26804fa9bb930085609",
+    "/js/wokiee.demo5-rtl.js": "/js/wokiee.demo5-rtl.js?id=a2670f5008bf3dddccb2",
     "/js/porto.demo2.js": "/js/porto.demo2.js?id=03105b08b395169f0f0b",
     "/js/porto.demo3.js": "/js/porto.demo3.js?id=10cda8122af6d4baa6df",
     "/js/porto.demo4.js": "/js/porto.demo4.js?id=0c79faaf8c588cb07975",
