--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,23 +1,20 @@
 {
     "/js/app.js": "/js/app.js?id=27f1a1c858e5dd3e14df",
     "/css/app.css": "/css/app.css?id=38f8827bac29200bae67",
-    "/js/frontend-ar.js": "/js/frontend-ar.js?id=7a90d1fa50adc14f00eb",
+    "/js/frontend-ar.js": "/js/frontend-ar.js?id=49b19312ee9c073768cf",
     "/js/frontend-custom.js": "/js/frontend-custom.js?id=7b6a552cbab306a88e81",
     "/js/frontend-en.js": "/js/frontend-en.js?id=4e599111b6b97a54923d",
     "/css/frontend-rtl.css": "/css/frontend-rtl.css?id=6d06760beb8bfc940224",
     "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=f850ab160019ccce99a2",
     "/css/frontend-custom-en.css": "/css/frontend-custom-en.css?id=d41d8cd98f00b204e980",
-    "/css/wokiee.demo4.css": "/css/wokiee.demo4.css?id=1d7abeec12df05476ca4",
-    "/css/wokiee.demo5.css": "/css/wokiee.demo5.css?id=1b8c8efa1f18320e0de1",
+    "/css/wokiee.demo.css": "/css/wokiee.demo.css?id=1d7abeec12df05476ca4",
     "/css/porto.demo2.css": "/css/porto.demo2.css?id=b821d4aa832f5f058cf3",
     "/css/porto.demo3.css": "/css/porto.demo3.css?id=75a66b5084679e8bfdf1",
     "/css/porto.demo4.css": "/css/porto.demo4.css?id=6f23ff24d09602948cae",
-    "/js/wokiee.demo5.js": "/js/wokiee.demo5.js?id=f26804fa9bb930085609",
-    "/js/wokiee.demo5-rtl.js": "/js/wokiee.demo5-rtl.js?id=a2670f5008bf3dddccb2",
+    "/js/wokiee.demo.js": "/js/wokiee.demo.js?id=f26804fa9bb930085609",
     "/js/porto.demo2.js": "/js/porto.demo2.js?id=03105b08b395169f0f0b",
     "/js/porto.demo3.js": "/js/porto.demo3.js?id=10cda8122af6d4baa6df",
     "/js/porto.demo4.js": "/js/porto.demo4.js?id=0c79faaf8c588cb07975",
-    "/js/frontend-rtl.js": "/js/frontend-rtl.js?id=46b07d19192c55ed1b1f",
     "/css/backend.css": "/css/backend.css?id=f7326001103896711efe",
     "/css/backend-rtl.css": "/css/backend-rtl.css?id=9443f88e20308d70c408",
     "/js/backend.js": "/js/backend.js?id=5c67471eda6b88c3f987",
