--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "devDependencies": {
         "axios": "^0.18.0",
         "cross-env": "^5.2.0",
+        "install": "^0.12.2",
         "laravel-mix": "^4.0.14",
         "lodash": "^4.17.11",
+        "popper.js": "^1.14.7",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.6.6"
     },
     "dependencies": {
+        "bootstrap": "^4.3.1",
         "bootstrap3-rtl": "^1.1.0",
         "datatables": "^1.10.13",
         "font-awesome": "^4.7.0",
