--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,13 +1,14 @@
 {
-    "/js/app.js": "/js/app.js?id=8b61c9cac942eaed3b4b",
-    "/css/app.css": "/css/app.css?id=0c00d9227ad256f3cf69",
-    "/js/frontend-ar.js": "/js/frontend-ar.js?id=83d366ae405353bf81d0",
-    "/js/frontend-custom.js": "/js/frontend-custom.js?id=f3881034485a496526f7",
-    "/js/frontend-en.js": "/js/frontend-en.js?id=f31f0bffa90dee10810a",
-    "/css/frontend-rtl.css": "/css/frontend-rtl.css?id=6d06760beb8bfc940224",
-    "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=67c09d1e8bd6c866d98b",
+    "/js/app.js": "/js/app.js?id=8a90888dc7680b269453",
+    "/css/app.css": "/css/app.css?id=38f8827bac29200bae67",
+    "/css/wokiee-theme-sass.css": "/css/wokiee-theme-sass.css?id=5626646d894d81d04a0e",
+    "/css/wokiee-theme-sass-rtl.css": "/css/wokiee-theme-sass-rtl.css?id=42c5eeb1269f76e7c924",
+    "/js/frontend-ar.js": "/js/frontend-ar.js?id=49b19312ee9c073768cf",
+    "/js/frontend-custom.js": "/js/frontend-custom.js?id=51697de4a205dca852f2",
+    "/js/frontend-en.js": "/js/frontend-en.js?id=ef87b5d98a5784ed6f5c",
+    "/css/frontend-custom-ar.css": "/css/frontend-custom-ar.css?id=b4840b75654e6d557687",
     "/css/frontend-custom-en.css": "/css/frontend-custom-en.css?id=d9b5353d3dfc65f26f7b",
-    "/css/wokiee.demo.css": "/css/wokiee.demo.css?id=2eef03549b128d71fec0",
+    "/css/plugins.css": "/css/plugins.css?id=f10f930f87e28d52042e",
     "/js/wokiee.demo.js": "/js/wokiee.demo.js?id=fcb9de9126304f5e7478",
     "/css/backend.css": "/css/backend.css?id=f7326001103896711efe",
     "/css/backend-rtl.css": "/css/backend-rtl.css?id=9443f88e20308d70c408",
