--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
+        "laravel/dusk": "^5.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
@@ -45,16 +46,13 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Usama\\Tap\\": "packages/usama/tap/src"
         },
         "classmap": [
             "database/seeds",
             "database/factories"
         ],
-        "psr-4": {
-            "App\\": "app/",
-            "Usama\\Tap\\": "packages/usama/tap/src"
-        },
         "files" : [
             "app/Services/Helpers.php"
         ]
